--- a/DigDug/DigDug.vcxproj
+++ b/DigDug/DigDug.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="Objects.cpp" />
     <ClCompile Include="Pooka.cpp" />
     <ClCompile Include="Rock.cpp" />
     <ClCompile Include="Sand.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="Objects.h" />
     <ClInclude Include="Pooka.h" />
     <ClInclude Include="Rock.h" />
     <ClInclude Include="Sand.h" />
